--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light area-90 mx-auto fs-reg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="./index.html"
             ><img src="./images/logo.png" alt=""
           /></a>
           <button
@@ -49,7 +49,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 p-right">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="index.html"
                   >Home</a
@@ -63,8 +63,10 @@
               </li>
             </ul>
 
-            <button class="btn fs-reg primary-color">
-              <a href="./pages/contact.html">Contact Us</a>
+            <button class="btn fs-reg">
+              <a class="primary-color" href="./pages/contact.html"
+                >Contact Us</a
+              >
             </button>
           </div>
         </div>
@@ -75,10 +77,10 @@
 
     <!-- hero area starts -->
 
-    <div class="container-fluid px-0">
+    <div class="container-fluid px-0 header-area">
       <div class="container wide-90 py">
-        <div class="row align-items-center">
-          <div class="col-lg-6">
+        <div class="row align-items-center justify-content-center">
+          <div class="col-lg-6 col-md-8 col-10">
             <h1 class="fs-xl">Marriage and Relationship Coaching</h1>
             <p class="fs-reg">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
@@ -86,7 +88,7 @@
               imperdiet et hendrerit in, accumsan tempus erat.
             </p>
             <button class="btn primary-bg white-clr">
-              <a class="white-clr" href="./pages/success.html">Book Now</a>
+              <a class="white-clr" href="./pages/webinar.html">Book Now</a>
             </button>
           </div>
           <div class="col-lg-6 hero-banner">
@@ -121,7 +123,7 @@
             />
             <img src="./images/hero.png" alt="" />
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-8 col-10">
             <h2 class="fs-md bold">We offer the best services</h2>
             <p class="fs-reg">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
@@ -144,7 +146,7 @@
               </li>
             </ul>
             <button class="btn">
-              <a class="primary-color" href="./pages/success.html">Book Now</a>
+              <a class="primary-color" href="./pages/webinar.html">Book Now</a>
             </button>
           </div>
         </div>
@@ -171,7 +173,7 @@
           </div>
         </div>
         <div class="row justify-content-center align-items-center p-bottom">
-          <div class="taglines-box col-lg-3 col-md-8 col-12 shadow py round-1">
+          <div class="taglines-box col-lg-3 col-md-8 col-10 shadow py round-1">
             <img
               class="secondary-bg border"
               src="./images/emojione-monotone_ring.png"
@@ -183,10 +185,12 @@
               consectetur justo quis euismod vehicula. Quisque diam dui,
               imperdiet et hendrerit in, accumsan tempus erat.
             </p>
-            <button class="btn primary-color">Learn More</button>
+            <button class="btn">
+              <a class="primary-color" href="./pages/sales.html">Learn More</a>
+            </button>
           </div>
           <div
-            class="taglines-box offset-lg-1 col-lg-3 col-md-8 col-12 shadow py round-1"
+            class="taglines-box offset-lg-1 col-lg-3 col-md-8 col-10 shadow py round-1"
           >
             <img
               class="secondary-bg border"
@@ -199,10 +203,12 @@
               consectetur justo quis euismod vehicula. Quisque diam dui,
               imperdiet et hendrerit in, accumsan tempus erat.
             </p>
-            <button class="btn primary-color">Learn More</button>
+            <button class="btn">
+              <a class="primary-color" href="./pages/sales.html">Learn More</a>
+            </button>
           </div>
           <div
-            class="taglines-box offset-lg-1 col-lg-3 col-md-8 col-12 shadow py round-1"
+            class="taglines-box offset-lg-1 col-lg-3 col-md-8 col-10 shadow py round-1"
           >
             <img
               class="secondary-bg border"
@@ -215,7 +221,9 @@
               consectetur justo quis euismod vehicula. Quisque diam dui,
               imperdiet et hendrerit in, accumsan tempus erat.
             </p>
-            <button class="btn primary-color">Learn More</button>
+            <button class="btn">
+              <a class="primary-color" href="./pages/sales.html">Learn More</a>
+            </button>
           </div>
         </div>
       </div>
@@ -246,7 +254,9 @@
           </div>
         </div>
         <div class="row justify-content-center align-content-center py">
-          <div class="col-lg-3 col-md-8 col-12 white-bg shadow round-1 py">
+          <div
+            class="col-lg-3 col-md-8 col-10 white-bg shadow round-1 py feedback-box"
+          >
             <div class="feedback__title py">
               <div class="upper-row p-bottom">
                 <img src="./images/Ellipse12.png" alt="" />
@@ -266,7 +276,7 @@
             </div>
           </div>
           <div
-            class="col-lg-3 col-md-8 col-12 offset-lg-1 white-bg shadow round-1 py"
+            class="col-lg-3 col-md-8 col-10 offset-lg-1 white-bg shadow round-1 py feedback-box"
           >
             <div class="feedback__title py">
               <div class="upper-row p-bottom">
@@ -287,7 +297,7 @@
             </div>
           </div>
           <div
-            class="col-lg-3 col-md-8 col-12 offset-lg-1 white-bg shadow round-1 py"
+            class="col-lg-3 col-md-8 col-10 offset-lg-1 white-bg shadow round-1 py feedback-box"
           >
             <div class="feedback__title py">
               <div class="upper-row p-bottom">
@@ -370,12 +380,12 @@
             </ul>
           </div>
           <div class="col-lg-2 col-md-3 col-6 offset-lg-1 order-2 order-md-3">
-            <ul class="ls-none">
+            <ul class="ls-none float-end">
               <li class="p-bottom">
                 <a class="white-clr" href="./pages/service.html">Services</a>
               </li>
               <li class="p-bottom">
-                <a class="white-clr" href="#">Contact</a>
+                <a class="white-clr" href="./pages/contact.html">Contact</a>
               </li>
               <li class="p-bottom">
                 <a class="white-clr" href="#">Privacy Policy</a>
@@ -383,12 +393,14 @@
             </ul>
           </div>
           <div class="col-lg-2 col-md-3 col-6 offset-lg-2 order-4 order-md-4">
-            <p>Connect With Us</p>
-            <div class="footer__media">
-              <i class="fa-brands fa-facebook p-right"></i>
-              <i class="fa-brands fa-instagram p-right"></i>
-              <i class="fa-brands fa-twitter p-right"></i>
-              <i class="fa-brands fa-linkedin"></i>
+            <div class="float-end">
+              <p>Connect With Us</p>
+              <div class="footer__media">
+                <i class="fa-brands fa-facebook p-right"></i>
+                <i class="fa-brands fa-instagram p-right"></i>
+                <i class="fa-brands fa-twitter p-right"></i>
+                <i class="fa-brands fa-linkedin"></i>
+              </div>
             </div>
           </div>
         </div>
