--- a/pages/sales.html
+++ b/pages/sales.html
@@ -34,7 +34,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light area-90 mx-auto fs-reg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="../index.html"
             ><img src="../images/logo.png" alt=""
           /></a>
           <button
@@ -84,7 +84,7 @@
 
     <!-- hero area starts -->
 
-    <div class="container-fluid px-0">
+    <div class="container-fluid px-0 header-area">
       <div class="container wide-90 py">
         <div class="row align-items-center">
           <div class="col-lg-6">
@@ -117,7 +117,7 @@
     >
       <div class="container wide-90 py">
         <div class="row justify-content-center align-items-center p-bottom">
-          <div class="col-lg-5 col-md-8 col-12 text-center py">
+          <div class="col-lg-5 col-md-8 col-10 text-center py">
             <div class="taglines-header">
               <h1 class="fs-lg bold">
                 The Perfect Solution to your Relationship Issues
@@ -132,7 +132,7 @@
         </div>
         <div class="row justify-content-center align-items-center p-bottom">
           <div
-            class="taglines-box col-lg-3 col-md-8 col-12 shadow py round-1 white-bg"
+            class="taglines-box col-lg-3 col-md-8 col-10 shadow py round-1 white-bg"
           >
             <img
               class="secondary-bg border"
@@ -147,7 +147,7 @@
             </p>
           </div>
           <div
-            class="taglines-box offset-lg-1 col-lg-3 col-md-8 col-12 shadow py round-1 white-bg"
+            class="taglines-box offset-lg-1 col-lg-3 col-md-8 col-10 shadow py round-1 white-bg"
           >
             <img
               class="secondary-bg border"
@@ -162,7 +162,7 @@
             </p>
           </div>
           <div
-            class="taglines-box offset-lg-1 col-lg-3 col-md-8 col-12 shadow py round-1 white-bg"
+            class="taglines-box offset-lg-1 col-lg-3 col-md-8 col-10 shadow py round-1 white-bg"
           >
             <img
               class="secondary-bg border"
@@ -228,10 +228,10 @@
 
     <!-- hero area starts -->
 
-    <div class="container-fluid px-0 secondary-bg">
+    <div class="container-fluid px-0 secondary-bg body-section">
       <div class="container wide-90 py">
         <div class="row align-items-center">
-          <div class="col-lg-6 col-md-8 col-10">
+          <div class="col-lg-6 col-md-8 col-10 mx-auto">
             <h1 class="fs-xl">Why I help Relationships & Marriages</h1>
             <p class="fs-reg">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
@@ -287,7 +287,9 @@
           </div>
         </div>
         <div class="row justify-content-center align-content-center py">
-          <div class="col-lg-3 col-md-8 col-12 white-bg shadow round-1 py">
+          <div
+            class="col-lg-3 col-md-8 col-10 white-bg shadow round-1 py feedback-box"
+          >
             <div class="feedback__title py">
               <div class="upper-row p-bottom">
                 <img src="../images/Ellipse12.png" alt="" />
@@ -307,7 +309,7 @@
             </div>
           </div>
           <div
-            class="col-lg-3 col-md-8 col-12 offset-lg-1 white-bg shadow round-1 py"
+            class="col-lg-3 col-md-8 col-10 feedback-box offset-lg-1 white-bg shadow round-1 py"
           >
             <div class="feedback__title py">
               <div class="upper-row p-bottom">
@@ -328,7 +330,7 @@
             </div>
           </div>
           <div
-            class="col-lg-3 col-md-8 col-12 offset-lg-1 white-bg shadow round-1 py"
+            class="col-lg-3 col-md-8 col-10 feedback-box offset-lg-1 white-bg shadow round-1 py"
           >
             <div class="feedback__title py">
               <div class="upper-row p-bottom">
@@ -350,7 +352,9 @@
           </div>
         </div>
         <div class="row justify-content-center align-content-center py">
-          <div class="col-lg-3 col-md-8 col-12 white-bg shadow round-1 py">
+          <div
+            class="col-lg-3 col-md-8 col-10 feedback-box white-bg shadow round-1 py"
+          >
             <div class="feedback__title py">
               <div class="upper-row p-bottom">
                 <img src="../images/Ellipse12.png" alt="" />
@@ -370,7 +374,7 @@
             </div>
           </div>
           <div
-            class="col-lg-3 col-md-8 col-12 offset-lg-1 white-bg shadow round-1 py"
+            class="col-lg-3 col-md-8 col-10 feedback-box offset-lg-1 white-bg shadow round-1 py"
           >
             <div class="feedback__title py">
               <div class="upper-row p-bottom">
@@ -391,7 +395,7 @@
             </div>
           </div>
           <div
-            class="col-lg-3 col-md-8 col-12 offset-lg-1 white-bg shadow round-1 py"
+            class="col-lg-3 col-md-8 col-10 feedback-box offset-lg-1 white-bg shadow round-1 py last-child"
           >
             <div class="feedback__title py">
               <div class="upper-row p-bottom">
@@ -479,7 +483,9 @@
           </div>
         </div>
         <div class="row justify-content-center align-items-center p-top">
-          <div class="col-3 border shadow round-1 text-center">
+          <div
+            class="col-md-3 col-10 border shadow round-1 text-center feedback-box"
+          >
             <p class="fs-md bold py">Lite</p>
 
             <h3 class="fs-lg bold py inline"><del>N</del> 2,000</h3>
@@ -510,7 +516,9 @@
               <a class="primary-color" href="#">Choose Plan</a>
             </button>
           </div>
-          <div class="col-3 offset-1 border shadow round-1 text-center">
+          <div
+            class="col-md-3 col-10 offset-md-1 border shadow round-1 text-center feedback-box"
+          >
             <p class="fs-md bold py">Basic</p>
 
             <h3 class="fs-lg bold py inline"><del>N</del> 5,000</h3>
@@ -541,7 +549,9 @@
               <a class="primary-color" href="#">Choose Plan</a>
             </button>
           </div>
-          <div class="col-3 offset-1 border shadow round-1 text-center">
+          <div
+            class="col-md-3 col-10 offset-md-1 border shadow round-1 text-center feedback-box"
+          >
             <p class="fs-md bold py">Plus</p>
 
             <h3 class="fs-lg bold py inline"><del>N</del> 9,000</h3>
@@ -607,7 +617,7 @@
             </ul>
           </div>
           <div class="col-lg-2 col-md-3 col-6 offset-lg-1 order-2 order-md-3">
-            <ul class="ls-none">
+            <ul class="ls-none float-end">
               <li class="p-bottom">
                 <a class="white-clr" href="./service.html">Services</a>
               </li>
@@ -620,12 +630,14 @@
             </ul>
           </div>
           <div class="col-lg-2 col-md-3 col-6 offset-lg-2 order-4 order-md-4">
-            <p>Connect With Us</p>
-            <div class="footer__media">
-              <i class="fa-brands fa-facebook p-right"></i>
-              <i class="fa-brands fa-instagram p-right"></i>
-              <i class="fa-brands fa-twitter p-right"></i>
-              <i class="fa-brands fa-linkedin"></i>
+            <div class="float-end">
+              <p>Connect With Us</p>
+              <div class="footer__media">
+                <i class="fa-brands fa-facebook p-right"></i>
+                <i class="fa-brands fa-instagram p-right"></i>
+                <i class="fa-brands fa-twitter p-right"></i>
+                <i class="fa-brands fa-linkedin"></i>
+              </div>
             </div>
           </div>
         </div>
