--- a/pages/success.html
+++ b/pages/success.html
@@ -26,6 +26,7 @@
     <!-- utility css -->
     <link rel="stylesheet" href="../styles/utility.css" />
     <!-- main css -->
+    <link rel="stylesheet" href="../styles/success.css" />
   </head>
   <body>
     <main
@@ -36,7 +37,7 @@
           <div class="col-md-8 col-10 text-center">
             <div class="text-center p-bottom">
               <img src="../images/fetti.png" alt="" />
-              <h1 class="fs-xl inline p-left p-right">CONGRATULATIONS !!!</h1>
+              <h1 class="fs-xl inline mx-auto heading">CONGRATULATIONS !!!</h1>
               <img src="../images/fetti.png" alt="" />
             </div>
             <p class="p-top fs-mreg p-bottom">
