--- a/pages/webinar.html
+++ b/pages/webinar.html
@@ -34,7 +34,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light area-90 mx-auto fs-reg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="../index.html"
             ><img src="../images/logo.png" alt=""
           /></a>
           <button
@@ -241,14 +241,18 @@
         alt=""
         class="feedback-bg-bottom absolute"
       />
-      <div class="container wide-90">
-        <div class="row justify-content-center align-content-center py">
+      <div class="container wide-90 feedback-container">
+        <div
+          class="row justify-content-center align-content-center py feedback-header"
+        >
           <div class="col-lg-5 col-md-8 col-12 white">
             <h1 class="fs-xl text-center">More Reasons To Join My Webinar</h1>
           </div>
         </div>
         <div class="row justify-content-center align-content-center py">
-          <div class="col-lg-3 col-md-8 col-12 white-bg shadow round-1 py">
+          <div
+            class="col-lg-3 col-md-8 col-10 white-bg shadow round-1 py feedback-box"
+          >
             <div class="feedback__title py">
               <div class="upper-row p-bottom">
                 <img src="../images/Ellipse12.png" alt="" />
@@ -268,7 +272,7 @@
             </div>
           </div>
           <div
-            class="col-lg-3 col-md-8 col-12 offset-lg-1 white-bg shadow round-1 py"
+            class="col-lg-3 col-md-8 col-10 offset-lg-1 white-bg shadow round-1 py feedback-box"
           >
             <div class="feedback__title py">
               <div class="upper-row p-bottom">
@@ -289,7 +293,7 @@
             </div>
           </div>
           <div
-            class="col-lg-3 col-md-8 col-12 offset-lg-1 white-bg shadow round-1 py"
+            class="col-lg-3 col-md-8 col-10 offset-lg-1 white-bg shadow round-1 py feedback-box"
           >
             <div class="feedback__title py">
               <div class="upper-row p-bottom">
@@ -311,7 +315,9 @@
           </div>
         </div>
         <div class="row justify-content-center align-content-center py">
-          <div class="col-lg-3 col-md-8 col-12 white-bg shadow round-1 py">
+          <div
+            class="col-lg-3 col-md-8 col-10 white-bg shadow round-1 py feedback-box"
+          >
             <div class="feedback__title py">
               <div class="upper-row p-bottom">
                 <img src="../images/Ellipse12.png" alt="" />
@@ -331,7 +337,7 @@
             </div>
           </div>
           <div
-            class="col-lg-3 col-md-8 col-12 offset-lg-1 white-bg shadow round-1 py"
+            class="col-lg-3 col-md-8 col-10 offset-lg-1 white-bg shadow round-1 py feedback-box"
           >
             <div class="feedback__title py">
               <div class="upper-row p-bottom">
@@ -352,7 +358,7 @@
             </div>
           </div>
           <div
-            class="col-lg-3 col-md-8 col-12 offset-lg-1 white-bg shadow round-1 py"
+            class="col-lg-3 col-md-8 col-10 offset-lg-1 white-bg shadow round-1 py feedback-box last-child"
           >
             <div class="feedback__title py">
               <div class="upper-row p-bottom">
@@ -383,7 +389,7 @@
     >
       <div class="container wide-90">
         <div class="row align-items-center justify-content-center">
-          <div class="col-lg-8 col-10 p-bottom">
+          <div class="col-lg-8 col-11 p-bottom">
             <h1 class="fs-lg text-center">
               Are you ready to transfrom your Marriage and Relationship
             </h1>
@@ -412,7 +418,7 @@
           <div class="col-lg-2 col-md-3 col-6 order-3 order-md-1">
             <div class="footer__logo p-bottom">
               <img src="../images/logo_2.png" alt="" />
-              <p class="fs-reg light p-top">
+              <p class="fs-reg light">
                 88/89 Peter Odili Road, Port Harcourt, Rivers State.
               </p>
             </div>
@@ -431,7 +437,7 @@
             </ul>
           </div>
           <div class="col-lg-2 col-md-3 col-6 offset-lg-1 order-2 order-md-3">
-            <ul class="ls-none">
+            <ul class="ls-none float-end">
               <li class="p-bottom">
                 <a class="white-clr" href="./service.html">Services</a>
               </li>
@@ -444,12 +450,14 @@
             </ul>
           </div>
           <div class="col-lg-2 col-md-3 col-6 offset-lg-2 order-4 order-md-4">
-            <p>Connect With Us</p>
-            <div class="footer__media">
-              <i class="fa-brands fa-facebook p-right"></i>
-              <i class="fa-brands fa-instagram p-right"></i>
-              <i class="fa-brands fa-twitter p-right"></i>
-              <i class="fa-brands fa-linkedin"></i>
+            <div class="float-end">
+              <p>Connect With Us</p>
+              <div class="footer__media">
+                <i class="fa-brands fa-facebook p-right"></i>
+                <i class="fa-brands fa-instagram p-right"></i>
+                <i class="fa-brands fa-twitter p-right"></i>
+                <i class="fa-brands fa-linkedin"></i>
+              </div>
             </div>
           </div>
         </div>
