--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,7 +34,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light area-90 mx-auto fs-reg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="../index.html"
             ><img src="../images/logo.png" alt=""
           /></a>
           <button
@@ -49,7 +49,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 p-right">
               <li class="nav-item">
                 <a class="nav-link" href="../index.html">Home</a>
               </li>
@@ -66,8 +66,8 @@
               </li>
             </ul>
 
-            <button class="btn fs-reg primary-color">
-              <a href="./contact.html">Contact Us</a>
+            <button class="btn fs-reg">
+              <a class="primary-color" href="./contact.html">Contact Us</a>
             </button>
           </div>
         </div>
@@ -148,7 +148,7 @@
             </ul>
           </div>
           <div class="col-lg-2 col-md-3 col-6 offset-lg-1 order-2 order-md-3">
-            <ul class="ls-none">
+            <ul class="ls-none float-end">
               <li class="p-bottom">
                 <a class="white-clr" href="./service.html">Services</a>
               </li>
@@ -161,12 +161,14 @@
             </ul>
           </div>
           <div class="col-lg-2 col-md-3 col-6 offset-lg-2 order-4 order-md-4">
-            <p>Connect With Us</p>
-            <div class="footer__media">
-              <i class="fa-brands fa-facebook p-right"></i>
-              <i class="fa-brands fa-instagram p-right"></i>
-              <i class="fa-brands fa-twitter p-right"></i>
-              <i class="fa-brands fa-linkedin"></i>
+            <div class="float-end">
+              <p>Connect With Us</p>
+              <div class="footer__media">
+                <i class="fa-brands fa-facebook p-right"></i>
+                <i class="fa-brands fa-instagram p-right"></i>
+                <i class="fa-brands fa-twitter p-right"></i>
+                <i class="fa-brands fa-linkedin"></i>
+              </div>
             </div>
           </div>
         </div>
