--- a/pages/sales.html
+++ b/pages/sales.html
@@ -279,7 +279,9 @@
         class="feedback-bg-bottom absolute"
       />
       <div class="container wide-90">
-        <div class="row justify-content-center align-content-center py">
+        <div
+          class="row justify-content-center align-content-center py feedback-header"
+        >
           <div class="col-lg-5 col-md-8 col-12 white">
             <h1 class="fs-xl bold text-center">
               Here are our clients testimonials
